@@ -1,5 +1,7 @@
+DIST AQEMU-0.8-Beta2.tar.bz2 867040 RMD160 81bf27a0c17b78075f88a7bb20714abc03463216 SHA1 92a7e772c0fd4845a73d22ed7d1175f3cbf3fc89 SHA256 6b88b6ce5a4673ad745fede8a7be4fd234bb1cbbb4369f4a33c2850d5b1b3da9
 DIST aqemu-0.7.3.tar.bz2 610479 RMD160 2c25e4a21cf9d62062f9e904723088b8c61f80d8 SHA1 39c4a9ee50cd425dd3025212e5937f8a8ff09b43 SHA256 9654e44eb3a19cff473e86e4b00291c536081df9d52887e5148ae520f45e47e1
 EBUILD aqemu-0.7.3-r2.ebuild 1591 RMD160 281dc0892bd63c6efafe9f1e56330042431d7c9b SHA1 2b578fc6fd641d768cfa291f9704c784c6767edd SHA256 a57120ff22e57db50867900ce94604dc4e0906a61e75bee905f46c9638eec2ae
+EBUILD aqemu-0.8_beta2.ebuild 1014 RMD160 400dbf9c27c15e81b4a54f5bc50e32d6d4fc75f0 SHA1 adcf82dc66208e34028c8a15c4040138b60594f6 SHA256 a42b3e6f3f9759bc8030c283f232c92df5b721db26c470e6d1a14930289023e6
 EBUILD aqemu-9999.ebuild 1070 RMD160 38fc67e811c68e793ec01dbf0bb2303a5f9d83b0 SHA1 53f8abe4a1038797004cbd6c577405602f28e133 SHA256 8f32d7bbaa90a202191e2c6632cb33d137d7bd1d4208899d365f45e3b094a701
-MISC ChangeLog 840 RMD160 d7c48c264791b8cd7f9f1f04b8645f7ec85c8298 SHA1 3f7b7aafc33dbf0c6fff5740275b8f670f903a72 SHA256 3a2e7a5999c69a6b52820b69eb2165ed7a41e03f11bbf30acb8f69b48d167685
+MISC ChangeLog 934 RMD160 3594a9a99e1187c098cdf002f90c96af4a77e057 SHA1 a833e11ba0b156ddf2221881b230c67fc8e48d8d SHA256 ebf054f61d45aca5f244444d8cd44088217f510247dbca8045c658e7efe5e91c
 MISC metadata.xml 425 RMD160 894001e245346842e5e96c6938bd7ca83ab668e6 SHA1 fb581940ac27ad25db108515da6cb49b5f359b00 SHA256 71496d80c0c48d9c3c49e6a58354f24e076fa7f3dd92642e175bd6304ec269c8
